--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 ### Configuration du server RedPanda
-HOST_IP=172.16.0.23
+HOST_IP=localhost
 TOPIC="mon-super-topic"
 
 ### Configuration des generateurs de message (entier, entier, entier, booleen)
